lab1/service-1.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1-deploy
spec:
  selector:
    matchLabels:
      app: service-1
  replicas: 1
  template:
    metadata:
      labels:
        app: service-1
    spec:
      containers:
        - name: service-1
          image: service1:0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
