lab1/config.service-1.yml
apiVersion: v1
kind: Service
metadata:
  name: service-1-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: service-1
