lab1/config.service-2.yml
apiVersion: v1
kind: Service
metadata:
  name: service-2-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: service-2
